--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,71 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    color: white;
-    background-image:url(../Image/textura.jpg);
-    height: 100%;
-}
-
-header{
-    box-shadow: 0px 2px 15px rgb(150, 50, 150);
-    background-color: rgb(40, 0, 70);
-    padding: 10px;
-    align-items: center;
-    
-}
-header li{
- transition: 0.3s;   
+body {
+  color: white;
+  background-image: url(../Image/textura.jpg);
+  height: 100%;
+  text-align: center;
 }
 
-header li:hover{
- font-size: large;
-
-
+header {
+  box-shadow: 0px 2px 15px rgb(150, 50, 150);
+  background-color: rgb(40, 0, 70);
+  padding: 10px;
+  align-items: center;
+}
+header li {
+  transition: 0.3s;
 }
 
-header ul{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-}
-main{
-   
-    background-image: linear-gradient(to right, rgba(20,0,30,0.5), rgba(40,0,70,0.5),rgba(20,0,30,0.5) );
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+header li:hover {
+  font-size: large;
 }
 
-footer{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(40, 0, 70);
-    padding: 10px;
-
+header ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+}
+main {
+  background-image: linear-gradient(
+    to right,
+    rgba(20, 0, 30, 0.5),
+    rgba(40, 0, 70, 0.5),
+    rgba(20, 0, 30, 0.5)
+  );
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(40, 0, 70);
+  padding: 10px;
+}
 
-#contato form{
+.html {
+  text-align: center;
+  align-items: center;
+  display: flex;
+  box-shadow: 0px 2px 15px rgb(150, 50, 150);
+  background-color: rgb(40, 0, 70);
 
+  width: 400px;
+  margin: auto;
+}
 
+.linguagens {
+}
 
-    
+#contato form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
