--- a/css/style.css
+++ b/css/style.css
@@ -50,19 +50,44 @@ footer {
   padding: 10px;
 }
 
-.html {
+.sobre {
+    display: flex;
   text-align: center;
+  flex-direction: column;
   align-items: center;
-  display: flex;
   box-shadow: 0px 2px 15px rgb(150, 50, 150);
   background-color: rgb(40, 0, 70);
-
-  width: 400px;
+  width: 300px;
   margin: auto;
 }
 
-.linguagens {
+.html{
+    display: flex;
+    flex-direction: row;
 }
+
+.image{
+    
+}
+.linguagens {
+    display: flex;
+  text-align:left;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  margin: auto;
+}
+
+.linguage{
+    vertical-align: baseline;
+
+    
+    
+}
+.imagem{
+    filter: invert();
+}
+
 
 #contato form {
   display: flex;
